--- a/JaxRS1/pom.xml
+++ b/JaxRS1/pom.xml
@@ -34,6 +34,11 @@
     	<artifactId>jersey-server</artifactId>
     	<version>1.19.4</version>
     </dependency>
+    <dependency>
+    	<groupId>com.sun.jersey</groupId>
+    	<artifactId>jersey-json</artifactId>
+    	<version>1.19.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>JaxRS1</finalName>
