--- a/JaxRS1/src/main/webapp/WEB-INF/web.xml
+++ b/JaxRS1/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,10 @@
   <servlet>
   	<servlet-name>Servlet1</servlet-name>
   	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  	<init-param>
+  		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+  		<param-value>true</param-value>
+  	</init-param>
   </servlet>
   <servlet-mapping>
   	<servlet-name>Servlet1</servlet-name>
